@@ -10,3 +10,4 @@ SOURCE_LINK_NAME = Sources on
 SOURCE_LINK_TITLE = Go to the gitorious makefly homepage
 THEME_IS = Theme is:
 LINKS_TITLE = Links
+READ_MORE = Read more
